# perf_2025

./: .gitignore  .gitmodules  README.md  bench.slurm  pyproject.toml
analysis/: experimental_design.csv  generate_plots.py  io_patterns_analysis.ipynb  plot_results.py
config/workload/: cosmoflow_h100_custom.yaml  default_custom.yaml  dlrm_custom.yaml  megatron_deepspeed_LLNL_custom.yaml  unet3d_h100_custom.yaml
doc/: paper.tex  presentation.tex  references.bib
results/: benchmark_results.csv
results/default_custom/1/: 0_output.json  0_per_epoch_stats.json  summary.json
results/default_custom/2/: 0_output.json  0_per_epoch_stats.json  1_output.json  1_per_epoch_stats.json  summary.json
results/default_custom/4/: 0_output.json  0_per_epoch_stats.json  1_output.json  1_per_epoch_stats.json  2_output.json  2_per_epoch_stats.json  3_output.json  3_per_epoch_stats.json  summary.json
results/default_custom/6/: 0_output.json  0_per_epoch_stats.json  1_output.json  1_per_epoch_stats.json  2_output.json  2_per_epoch_stats.json  3_output.json  3_per_epoch_stats.json  4_output.json  4_per_epoch_stats.json  5_output.json  5_per_epoch_stats.json  summary.json
results/default_custom/8/: 0_output.json  0_per_epoch_stats.json  1_output.json  1_per_epoch_stats.json  2_output.json  2_per_epoch_stats.json  3_output.json  3_per_epoch_stats.json  4_output.json  4_per_epoch_stats.json  5_output.json  5_per_epoch_stats.json  6_output.json  6_per_epoch_stats.json  7_output.json  7_per_epoch_stats.json  summary.json
results/dlrm_custom/1/: 0_output.json  0_per_epoch_stats.json  (+1 more)
(+418 files in other folders)
